--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
   "autoload": {
     "psr-0" : {
       "CaptainKant\\Generics" : "src"
+    },
+    "require": {
+      "php": "^7.0"
     }
   }
 }
