--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "CaptainKant/Generics",
+  "name": "captainkant/generics",
   "type": "library",
   "description": "Zero Dependencies Framework for legacy PHP",
   "license": "MIT",
@@ -9,7 +9,7 @@
       "role": "Developer"
     }
   ],
-  "version": "1.0.0",
+  "version": "1.0.1",
   "autoload": {
     "psr-0" : {
       "CaptainKant\\Generics" : "src"
