--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
       "role": "Developer"
     }
   ],
-  "version": "1.0.1",
+  "version": "1.0.2",
   "autoload": {
-    "psr-0" : {
-      "CaptainKant\\Generics" : "src"
+    "psr-4" : {
+      "CaptainKant\\Generics" : "src/"
     }
   },
   "require": {
