--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "version": "1.0.2",
   "autoload": {
     "psr-4" : {
-      "CaptainKant\\Generics" : "src/"
+      "CaptainKant\\Generics\\" : "src/"
     }
   },
   "require": {
