--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
       "role": "Developer"
     }
   ],
-  "version": "1.0.5",
+  "version": "1.0.6",
   "autoload": {
     "psr-4" : {
       "CaptainKant\\Generics\\" : "src/"
     }
   },
   "require": {
-    "php": "^7.0"
+    "php": "^7.0",
+    "ext-calendar": "*"
   }
 }
